--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,5 @@ jobs:
       - uses: actions/upload-pages-artifact@v1
         with:
           path: '.'
+          retention-days: 7
       - uses: actions/deploy-pages@v1
